# xlsxwriterpp

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: xlsxwriterppConfig.cmake.in
examples/: main.cpp
examples/consumer_cmake/: CMakeLists.txt  consumer_main.cpp
include/: xlsxwriterpp.hpp
include/xlsxwriterpp/: cell_value.hpp  format_properties.hpp  mock_backend.hpp  workbook.hpp  worksheet.hpp  xlsx_backend_concept.hpp  xlsx_error.hpp  xlsxwriter_backend.hpp  xlsxwriterpp.hpp
test/: CMakeLists.txt  benchmark_performance.cpp  test_cell_value.cpp  test_format_properties.cpp  test_integration.cpp  test_smart_workbook.cpp  test_smart_worksheet.cpp
